[gd_scene load_steps=7 format=3 uid="uid://bp6utjhidon0r"]

[ext_resource type="Script" path="res://Menus/PauseMenu.gd" id="1_eavh5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gu6e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xraxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_obfx6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7gb4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tppmw"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eavh5")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -138.5
offset_right = 149.5
offset_bottom = 138.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.647059, 0.596078, 0.411765, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -95.5
offset_right = 119.0
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_font_sizes/font_size = 36
text = "Game Paused"
horizontal_alignment = 1

[node name="resumeButton" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.870588, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_focus_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_7gu6e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xraxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_obfx6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7gb4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tppmw")
text = "Resume"

[node name="restartButton" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.870588, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_focus_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_7gu6e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xraxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_obfx6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7gb4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tppmw")
text = "Restart"

[node name="exitButton" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.870588, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_focus_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_colors/font_hover_pressed_color = Color(0.270588, 0.247059, 0.105882, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_7gu6e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xraxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_obfx6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7gb4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tppmw")
text = "Exit"

[connection signal="pressed" from="ColorRect2/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
